Login nav fixed on mobile. Materalized login screen

--- a/l/css/main.css
+++ b/l/css/main.css
@@ -2,6 +2,11 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
+  font-family: 'pSans';
+}
+
+h2{
+  font-family: 'pSans' !important;
 }
 
 .form-signin, .form-signup {
